syntax = "proto3";


service BMI {
    rpc getBMI(wahRequest) returns (bmiResponse);
}

message wahRequest{
    int64 height = 1;
    int64 weight= 2;
}

message bmiResponse{
    int64 bmi = 1;
}